--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "lib": ["deno.window"],
     "strict": true
   },
   "imports": {
@@ -19,7 +18,9 @@
     "lint": "deno lint",
     "fmt": "deno fmt",
     "check": "deno check src/index.ts",
-    "start": "deno run --allow-net src/index.ts"
+    "start": "deno run --allow-net src/index.ts",
+    "build": "deno run --allow-read --allow-write --allow-run scripts/build_esm.ts",
+    "dev": "deno run --allow-net --watch src/index.ts"
   },
   "exclude": ["node_modules", "dist", "coverage"]
 }
