--- a/deno.json
+++ b/deno.json
@@ -17,10 +17,7 @@
     "test:integration": "deno test tests/integration/ --allow-net --allow-env --allow-read",
     "lint": "deno lint",
     "fmt": "deno fmt",
-    "check": "deno check src/index.ts",
-    "start": "deno run --allow-net src/index.ts",
-    "build": "deno run --allow-read --allow-write --allow-run scripts/build_esm.ts",
-    "dev": "deno run --allow-net --watch src/index.ts"
+    "check": "deno check src/index.ts"
   },
   "exclude": ["node_modules", "dist", "coverage"]
 }
