--- a/deno.json
+++ b/deno.json
@@ -4,9 +4,9 @@
   },
   "imports": {
     "neverthrow": "npm:neverthrow@6.2.2",
-    "deno:oauth-1.0a": "https://raw.githubusercontent.com/thisavoropaev/deno-oauth-1.0a/main/mod.ts",
+    "deno:oauth-1.0a": "https://raw.githubusercontent.com/thisavoropaev/deno_oauth_1.0a/refs/heads/jsr-package/mod.ts",
     "deno:dotenv": "https://deno.land/std@0.224.0/dotenv/load.ts",
-    "@std/testing": "https://deno.land/std@0.208.0/testing/mod.ts",
+    "@srmtd/testing": "https://deno.land/std@0.208.0/testing/mod.ts",
     "@std/assert": "https://deno.land/std@0.208.0/assert/mod.ts",
     "@/": "./src/",
     "@tests/": "./tests/"
