--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,18 @@
 {
-  "name": "@thisavoropaev/discogs-ts-client",
+  "name": "@thisavoropaev/discogs-deno-client",
   "version": "1.0.0",
   "description": "A modern TypeScript client for the Discogs API, optimized for edge and server runtimes (Deno, Node.js, Cloudflare, Vercel, etc).",
-  "keywords": ["discogs", "typescript", "api", "oauth", "edge", "deno", "nodejs"],
+  "keywords": [
+    "discogs",
+    "typescript",
+    "api",
+    "oauth",
+    "edge",
+    "deno",
+    "nodejs"
+  ],
   "license": "MIT",
-  "repository": "https://github.com/thisavoropaev/discogs-ts-client",
+  "repository": "https://github.com/thisavoropaev/discogs-deno-client",
   "exports": {
     ".": "./src/mod.ts"
   },
