--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     environment: development
     permissions:
       contents: write
+      id-token: write
 
     steps:
       - name: Checkout repository
@@ -18,10 +19,10 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all history to verify tag's branch
 
-      - name: Verify tag is on master branch
+      - name: Verify tag is on main branch
         run: |
-          if ! git merge-base --is-ancestor $GITHUB_SHA origin/master; then
-            echo "Tagged commit is not in master branch history. Aborting release."
+          if ! git merge-base --is-ancestor $GITHUB_SHA origin/main; then
+            echo "Tagged commit is not in main branch history. Aborting release."
             exit 1
           fi
 
@@ -50,6 +51,9 @@ jobs:
       - name: Get version from tag
         id: get_version
         run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Publish to JSR
+        run: deno publish
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
